# checkgit

./: Cargo.toml  LICENSE  README.md
checkgit/: Cargo.toml
checkgit/src/: helper.rs  main.rs  render.rs
checkgit/src/ui/: mod.rs
checkgit_core/: Cargo.toml
checkgit_core/src/: error.rs  github.rs  lib.rs  models.rs
