[package]
name = "checkgit"
version = "0.1.0"
edition = "2024"

[dependencies]
checkgit_core = { path = "../checkgit_core" }
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
viuer = "0.7"
chrono = "0.3"