[package]
name = "checkgit"
version = "0.1.1"
edition = "2024"
description = "Explore GitHub profiles and stats from your terminal"
license = "MIT"
repository = "https://github.com/shibu0x/checkgit"
readme = "../README.md"
keywords = ["github", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
checkgit_core = "0.1.0"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
viuer = "0.11"
chrono = "0.3"
